model-based added

--- a/book/ml_principles/rl/rl_principles.ipynb
+++ b/book/ml_principles/rl/rl_principles.ipynb
@@ -131,14 +131,63 @@
    "source": [
     "## Modellen\n",
     "\n",
-    "Het **doel van de agent is om tijdens de trainingsfase de optimale policy** $\\pi^*$ te vinden die de verwachte return maximaliseert. Dit kan op twee manieren:\n",
+    "Het **doel van de agent is om tijdens de trainingsfase de optimale policy** $\\pi^*$ te vinden die de verwachte return maximaliseert. Hiervoor bestaan fundamenteel twee benaderingen: **_model-free_** en **_model-based_** RL.\n",
+    "\n",
+    "### _Model-free_ RL\n",
+    "(target-rl-model-free)=\n",
+    "Bij _model-free_ RL leert de agent rechtstreeks uit ervaring **zonder een expliciet model van de omgevingsdynamieken te leren**. De agent leert welke acties goed zijn door ze uit te proberen en de _rewards_ te observeren. Dit kan op twee manieren:\n",
     "\n",
     "(target-rl-policy-based)=\n",
     "(target-rl-value-based)=\n",
     "1. **_Policy-based_**: Er wordt een ML model getraind met _states_ als input en acties als output. Daaruit krijgt de _agent_ bij _inference_ dus rechtstreeks informatie over de optimale actie.\n",
-    "2. **_Value based_**: Een ML model leert de _return_ te voorspellen, voor verschillende _states_ of _state_-actieparen. Daarna kan de _agent_, gegeven een bepaalde _state_, bijvoorbeeld de actie kiezen met de grootste verwachte _return_ (dit is een zogenaamde _greedy policy_).\n",
+    "2. **_Value based_**: Een ML model leert de _return_ te voorspellen, voor verschillende _states_ of _state_-actieparen. Daarna kan de _agent_, gegeven een bepaalde _state_, bijvoorbeeld de actie kiezen met de grootste verwachte _return_ (dit is een zogenaamde _greedy policy_).  \n",
+    "  \n",
+    "Voordelen van _model-free_ RL:\n",
+    "- Eenvoudiger te implementeren\n",
+    "- Geen modelfouten die kunnen accumuleren\n",
+    "- Werkt goed wanneer de omgeving te complex is om te modelleren\n",
     "\n",
-    "In principe kan ieder type ML model hierin gekoppeld worden. In wat volgt zullen we echter focussen op toepassingen met _deep learning_ modellen of zogenaamde _Deep RL_. De beschrijving van deze modellen, in termen van architectuur, parameters, features en hyperparameters wordt bepaald door de use-case en heeft geen specifieke eigenschappen die gekoppeld zijn an het domein van actieplanning."
+    "Nadelen van _model-free_ RL:\n",
+    "- _Sample_ inefficiënt: Vereist veel interacties met de omgeving\n",
+    "- Geen planning mogelijk: Kan niet \"nadenken\" over toekomstige scenario's zonder echte ervaring\n",
+    "\n",
+    "### _Model-based_ RL\n",
+    "(target-rl-model-based)=\n",
+    "Bij _model-based_ RL leert de agent een **expliciet model van de omgevingsdynamieken**. Dit model voorspelt hoe de omgeving zal reageren op acties:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\hat{s}_{t+1} &= f_{\\theta}(s_t, a_t) \\quad \\text{(next state prediction)} \\cr\n",
+    "\\hat{r}_{t+1} &= g_{\\theta}(s_t, a_t) \\quad \\text{(reward prediction)}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Met dit geleerde model kan de agent:\n",
+    "- toekomstige trajecten simuleren zonder echte interacties\n",
+    "- Verschillende acties \"in gedachten\" uitproberen voordat er een keuze gemaakt wordt\n",
+    "- Gesimuleerde ervaringen genereren om training te versnellen\n",
+    "\n",
+    "Voordelen van _model-based_ RL:\n",
+    "- _Sample_ efficiënt: Kan veel leren uit weinig echte interacties\n",
+    "- Planning: Kan vooruitdenken en plannen maken\n",
+    "- Transfer learning: Modelkennis kan hergebruikt worden voor nieuwe taken in dezelfde omgeving\n",
+    "- Interpreteerbaarheid: Het geleerde model kan inzicht geven in hoe de omgeving werkt\n",
+    "\n",
+    "Nadelen van _model-based_ RL:\n",
+    "- _Error propagation_: Kleine fouten in het model kunnen leiden tot grote fouten in planning\n",
+    "- Complexiteit: Het leren van accurate omgevingsmodellen kan zeer uitdagend zijn\n",
+    "- Computational cost: Planning met modellen vereist extra berekeningen\n",
+    "- Niet altijd praktisch: Voor zeer complexe omgevingen (bv. sociale interacties) is een accuraat model vaak onhaalbaar\n",
+    "\n",
+    "Het bekendste voorbeeld van een _model-based_ RL algoritme is wellicht _[MuZero](https://deepmind.google/blog/muzero-mastering-go-chess-shogi-and-atari-without-rules/)_; Google DeepMind's algoritme dat o.a. schaak en Go beheerst zonder de spelregels te kennen.\n",
+    "\n",
+    "### Hybride benaderingen\n",
+    "In de praktijk worden _model-free_ en _model-based_ benaderingen vaak gecombineerd om de voordelen van beide te benutten:\n",
+    "- Model-geassisteerde _model-free_ learning: Gebruik het model om extra training data te genereren\n",
+    "- Dyna-architecturen: Wissel af tussen echte ervaring en gesimuleerde ervaring\n",
+    "- Ensemble methoden: Gebruik meerdere modellen om onzekerheid te schatten\n",
+    "\n",
+    "In principe kan ieder type ML model in deze benaderingen gekoppeld worden. In wat volgt zullen we echter focussen op toepassingen met _deep learning_ modellen of zogenaamde _Deep RL_. De beschrijving van deze modellen, in termen van architectuur, parameters, features en hyperparameters wordt bepaald door de use-case en heeft geen specifieke eigenschappen die gekoppeld zijn aan het domein van actieplanning."
    ]
   },
   {
@@ -150,9 +199,11 @@
     "\n",
     "De training is bij RL doorgaans veel complexer dan bij andere domeinen van ML. Dat komt vooral door de verschillende leeralgoritmes, hyperparameters (bv. om exploratie versus exploitatie te bepalen) en complexe _loss_ functies om de _reward_ signalen te vertalen naar de updates voor de modelparameters. Door de grote **variabiliteit**, bestaat er een reëel **risico op instabiele training**. Die variabiliteit komt uiteraard ook uit de omgeving van de agent zelf die soms heel complex kunnen zijn (denk bv. aan een zelfrijdende wagen). Hoe krachtig de resultaten van RL ook kunnen zijn, het toepassen van RL in een nieuwe omgeving blijft doorgaans heel uitdagend.  \n",
     "  \n",
-    "De leeralgoritmes hangen nauw samen met de gekozen modeltypes: _policy based_, _value based_ of beide.\n",
+    "De leeralgoritmes hangen nauw samen met de gekozen modeltypes. We bespreken hier de belangrijkste algoritmes voor _model-free_ en _model-based_ RL.\n",
     "\n",
-    "### _Q-learning_\n",
+    "### _Model-free_ leeralgoritmes\n",
+    "\n",
+    "#### _Q-learning_\n",
     "(target-rl-q-learning)=\n",
     "_**Q-Learning**_ is een _value based_ algoritme waarbij een optimale _state_-actie _value_ functie (of model) $Q^*(s, a)$ geleerd wordt. Een _greedy policy_ neemt dan meestal de volgende vorm aan:\n",
     "\n",
@@ -172,7 +223,7 @@
     "\n",
     "De gradient van de $Q$-_loss_ wordt dan gebruikt om de parameters van het neurale netwerk via standaard _backpropagation_ en _gradient descent_ te updaten.\n",
     "\n",
-    "### _Policy gradient learning_\n",
+    "#### _Policy gradient learning_\n",
     "(target-rl-policy-gradient)=\n",
     "Deze familie van leeralgoritmes zijn _policy based_. Er wordt dus rechtstreeks een optimale _policy_-functie (of model) ${\\pi_{\\theta}}^*(a|s)$ geleerd. **_Policy gradient learning_** past _gradient ascent_ toe op de gradient van de verwachtte _return_ (om die dus te maximaliseren):\n",
     "\n",
@@ -194,9 +245,45 @@
     "\n",
     "[^ascent]: Vandaar dat we hier te maken hebben met _gradient ascent_ en niet _gradient descent_.\n",
     "\n",
-    "### _Actor-critic learning_\n",
+    "#### _Actor-critic learning_\n",
     "(target-rl-actor-critic)=\n",
-    "Hierbij wordt een _value_-functie gecombineerd met een _policy_-functie. De _actor_ leert de _policy_ ${\\pi_{\\theta}}^*(a|s)$ terwijl de _critic_ de _value_-functie $Q^*(s, a)$ of $V^*(s)$ leert. In plaats van de werkelijke _returns_ $G_t$ te gebruiken bij het updaten van de policy (zoals bij _policy gradient learning_), worden _value_-predicties van de _critic_ gebruikt (_expected return_). Net zoals het PPO algoritme, leidt deze techniek over het algemeen tot stabielere resultaten. Doordat er niet moet gewacht worden tot tot het einde van een interactie om de werkelijke _return_ te berekenen, wordt deze benadering vaak gekozen omwille van _sample_ efficiëntie en bij continue taken (bv. robotica; zie verder). De meest populaire variant _{u}`Soft-Actor-Critic`_ (SAC) introduceert ook entropie in de parameter-optimalisatie functie ({cite}`10.48550/arXiv.1801.01290`). "
+    "Hierbij wordt een _value_-functie gecombineerd met een _policy_-functie. De _actor_ leert de _policy_ ${\\pi_{\\theta}}^*(a|s)$ terwijl de _critic_ de _value_-functie $Q^*(s, a)$ of $V^*(s)$ leert. In plaats van de werkelijke _returns_ $G_t$ te gebruiken bij het updaten van de policy (zoals bij _policy gradient learning_), worden _value_-predicties van de _critic_ gebruikt (_expected return_). Net zoals het PPO algoritme, leidt deze techniek over het algemeen tot stabielere resultaten. Doordat er niet moet gewacht worden tot tot het einde van een interactie om de werkelijke _return_ te berekenen, wordt deze benadering vaak gekozen omwille van _sample_ efficiëntie en bij continue taken (bv. robotica; zie verder). De meest populaire variant _{u}`Soft-Actor-Critic`_ (SAC) introduceert ook entropie in de parameter-optimalisatie functie ({cite}`10.48550/arXiv.1801.01290`). \n",
+    "\n",
+    "### _Model-based_ leeralgoritmes\n",
+    "\n",
+    "Bij _model-based_ RL draait het leerproces om twee afzonderlijke maar gekoppelde leertaken:\n",
+    "1. Het leren van het omgevingsmodel\n",
+    "2. Het leren van de optimale policy op basis van het omgevingsmodel\n",
+    "\n",
+    "#### Omgevingsmodel\n",
+    "\n",
+    "Het eerste leerprobleem is het trainen van een model dat de omgevingsdynamieken voorspelt. Het model wordt getraind met standaard _supervised learning_ technieken (bv. _gradient descent_ op de MSE _loss_), gebruikmakend van echte ervaringen verzameld uit interacties met de omgeving.\n",
+    "\n",
+    "#### _Policy_ model\n",
+    "\n",
+    "Eens het omgevingsmodel getraind is, kan het gebruikt worden om de optimale policy te vinden. Er bestaan verschillende varianten:\n",
+    "\n",
+    "##### Dyna-Q\n",
+    "Combineert _model-free Q-learning_ met _model-based_ planning:\n",
+    "1. Voer een echte actie uit in de omgeving en observeer $(s, a, r, s')$\n",
+    "2. Update $Q(s,a)$ op basis van deze echte ervaring (_model-free_ update)\n",
+    "3. Gebruik het omgevingsmodel om $n$ gesimuleerde transities te genereren\n",
+    "4. Update $Q(s,a)$ ook op basis van deze gesimuleerde ervaringen (_model-based_ update)\n",
+    "\n",
+    "##### Model Predictive Control (MPC)\n",
+    "Bij elke beslissing:\n",
+    "1. Simuleer meerdere mogelijke actiesequenties met het omgevingsmodel\n",
+    "2. Evalueer welke sequentie de hoogste verwachte cumulatieve reward oplevert\n",
+    "3. Voer alleen de eerste actie van de beste sequentie uit\n",
+    "4. Herhaal dit proces bij de volgende state (receding horizon)\n",
+    "\n",
+    "##### World Models\n",
+    "Leert een compact latent model van de omgeving:\n",
+    "1. Train een _variational autoencoder_ (VAE) om observaties te comprimeren naar een latente representatie\n",
+    "2. Train een _recurrent model_ (bv. Transformer) om toekomstige latente states te voorspellen\n",
+    "3. Train een policy volledig binnen de geleerde latente ruimte (_dreaming_)\n",
+    "\n",
+    "Dit is bijzonder nuttig voor visueel complexe omgevingen (bv. videogames) waar het direct voorspellen van pixels te moeilijk is."
    ]
   },
   {
