basic rl lab ready

--- a/book/ml_principles/rl/rl_principles.ipynb
+++ b/book/ml_principles/rl/rl_principles.ipynb
@@ -214,7 +214,7 @@
     "Tijdens het trainen kan een agent gestuurd worden richting meer of minder exploratie van de $Q$ ruimte. Bij een _greedy policy_ kiest de _agent_ telkens voor de actie met de hoogste verwachte (_discounted_) _return_ (\"exploitatie\"). Daardoor kan het leertraject traag verlopen omdat de agent niet of te weinig terecht komt in onbekende states die mogelijks tot een hogere _return_ leiden. Daarom kiest men meestal voor een zogenaamde $\\epsilon$-_greedy policy_ waarbij met een probabiliteit $\\epsilon$ een random actie (exploration) genomen wordt in plaats van de beste actie volgens $Q(s, a)$\n",
     ":::\n",
     "\n",
-    "Bij _Deep Q Learning_ wordt de zogenaamde $Q$-_loss_ berekend door de voorspelde (_discounted_) return bij een gegeven _state_-actionpaar te vergelijken met een $Q$-_target_ (in de standaard MSE vorm). Die _target_ wordt {u}`geschat` door de voorspellingen van het model zelf (met parameters $\\theta$) over de $Q$-_value_ van de volgende state $s'$, samen met de onmiddellijke _return_ $r$, in de zogenaamde {u}`_Bellman_ vergelijking` in te vullen:\n",
+    "Bij _Deep Q Learning_ wordt de zogenaamde $Q$-_loss_ berekend door de voorspelde (_discounted_) return bij een gegeven _state_-actionpaar te vergelijken met een $Q$-_target_ (in de standaard MSE vorm). Die _target_ wordt geschat door de voorspellingen van het model zelf (met parameters $\\theta$) over de $Q$-_value_ van de volgende state $s'$, samen met de onmiddellijke _return_ $r$, in de zogenaamde _Bellman_ vergelijking in te vullen:\n",
     "\n",
     "$$\n",
     "Q_{\\text{target}} = r + \\gamma \\underset{a'}{\\operatorname{\\argmax}} Q(s', a', \\theta)\n",
@@ -238,7 +238,7 @@
     "- $G_t$: De _return_ (cumulatieve _reward_) vanaf tijdstip $t$.\n",
     "- Het dot-product: Verhoogt de probabiliteit van acties die tot hoge _returns_ leidden en verlaag de probabiliteit van acties tot lage _returns_ leidden.\n",
     "  \n",
-    "Dit vormt de basis van het REINFORCE algoritme door {cite}`10.1007/BF00992696`. In recent werk wordt meestal gewerkt met het zogenaamde _{u}`Proximal Policy Optimization`_ (PPO) algoritme wat over het algemeen stabielere resultaten oplevert.  \n",
+    "Dit vormt de basis van het REINFORCE algoritme door {cite}`10.1007/BF00992696`. In recent werk wordt meestal gewerkt met het zogenaamde Proximal Policy Optimization (PPO) algoritme wat over het algemeen stabielere resultaten oplevert.  \n",
     "  \n",
     "Merk op dat de optimalisatie hier niet op basis van een _loss_ functie gebeurt, maar door rechtstreeks de verwachtte _return_ $J(\\theta)$ te maximaliseren[^ascent].\n",
     "\n",
@@ -246,7 +246,7 @@
     "\n",
     "#### _Actor-critic learning_\n",
     "(target-rl-actor-critic)=\n",
-    "Hierbij wordt een _value_-functie gecombineerd met een _policy_-functie. De _actor_ leert de _policy_ ${\\pi_{\\theta}}^*(a|s)$ terwijl de _critic_ de _value_-functie $Q^*(s, a)$ of $V^*(s)$ leert. In plaats van de werkelijke _returns_ $G_t$ te gebruiken bij het updaten van de policy (zoals bij _policy gradient learning_), worden _value_-predicties van de _critic_ gebruikt (_expected return_). Net zoals het PPO algoritme, leidt deze techniek over het algemeen tot stabielere resultaten. Doordat er niet moet gewacht worden tot tot het einde van een interactie om de werkelijke _return_ te berekenen, wordt deze benadering vaak gekozen omwille van _sample_ efficiëntie en bij continue taken (bv. robotica; zie verder). De meest populaire variant _{u}`Soft-Actor-Critic`_ (SAC) introduceert ook entropie in de parameter-optimalisatie functie ({cite}`10.48550/arXiv.1801.01290`). \n",
+    "Hierbij wordt een _value_-functie gecombineerd met een _policy_-functie. De _actor_ leert de _policy_ ${\\pi_{\\theta}}^*(a|s)$ terwijl de _critic_ de _value_-functie $Q^*(s, a)$ of $V^*(s)$ leert. In plaats van de werkelijke _returns_ $G_t$ te gebruiken bij het updaten van de policy (zoals bij _policy gradient learning_), worden _value_-predicties van de _critic_ gebruikt (_expected return_). Net zoals het PPO algoritme, leidt deze techniek over het algemeen tot stabielere resultaten. Doordat er niet moet gewacht worden tot tot het einde van een interactie om de werkelijke _return_ te berekenen, wordt deze benadering vaak gekozen omwille van _sample_ efficiëntie en bij continue taken (bv. robotica; zie verder). De meest populaire variant _Soft-Actor-Critic_ (SAC) introduceert ook entropie in de parameter-optimalisatie functie ({cite}`10.48550/arXiv.1801.01290`). \n",
     "\n",
     "### _Model-based_ leeralgoritmes\n",
     "\n",
