add uv ad-hioc installs

--- a/book/ml_principles/labs/rl_basics.ipynb
+++ b/book/ml_principles/labs/rl_basics.ipynb
@@ -2,11 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cf5682fe",
+   "id": "83c9c374",
    "metadata": {},
    "source": [
     "# Basis _reinforcement learning_\n",
     "\n",
+    "Voor dit labo dien je volgende packages ad-hoc te installeren in de devcontainer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f5841d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!uv add pygame\n",
+    "!uv add swig\n",
+    "!uv add gymnasium[box2d]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf5682fe",
+   "metadata": {},
+   "source": [
     "## CartPole\n",
     "\n",
     "CartPole is een klassiek controle probleem waarbij een staaf rechtop moet blijven op een kar die heen en weer kan bewegen.\n",
@@ -36,11 +56,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
-    "import torch\n",
-    "# from matplotlib import animation\n",
-    "\n",
-    "\n",
-    "# print(f\"CUDA available: {torch.cuda.is_available()}\")"
+    "import torch"
    ]
   },
   {
@@ -224,7 +240,7 @@
    "outputs": [],
    "source": [
     "# Train the agent for longer\n",
-    "model.learn(total_timesteps=50000, progress_bar=True)\n",
+    "model.learn(total_timesteps=100000, progress_bar=True)\n",
     "\n",
     "# Evaluate the trained model (wrap env with Monitor to avoid warning)\n",
     "eval_env = Monitor(gym.make(\"CartPole-v1\"))\n",
