--- a/book/ml_principles/rl/rl_principles.ipynb
+++ b/book/ml_principles/rl/rl_principles.ipynb
@@ -18,7 +18,7 @@
     "\n",
     ":::{important}\n",
     "(target-rl-agent)=\n",
-    "RL is dus een specifiek principe waarmee een model [ervaring](../basics/experience.ipynb) kan opdoen dat vooral gebruikt wordt bij {ref}`actieplanning <target-planning>`. principe. **RL verwijst dus {u}`niet` naar een specifiek {ref}`model <target-model>`**! Zo zagen we reinforcement al onder de vorm van _reinforcement learning from human feedback_ (RLHF) in de context van het finetunen van large language modellen. In deze secties bespreken we de benadering specifiek in het kader van {ref}`actieplanning <target-planning>`. Daarbij wordt vaak de term **\"_agent_\"** gebruikt. Dit verwijst algemeen naar het systeem dat **iteratief observeert, acties neemt en resultaten van acties integreert**. De agent kan daarbij rekenen op de voorspellingen van **één of meerdere ML modellen**.\n",
+    "RL is dus een specifiek principe waarmee een model [ervaring](../basics/experience.ipynb) kan opdoen dat vooral gebruikt wordt bij {ref}`actieplanning <target-planning>`. principe. **RL verwijst dus _niet_ naar een specifiek {ref}`model <target-model>`**! Zo zagen we reinforcement al onder de vorm van _reinforcement learning from human feedback_ (RLHF) in de context van het finetunen van large language modellen. In deze secties bespreken we de benadering specifiek in het kader van {ref}`actieplanning <target-planning>`. Daarbij wordt vaak de term **\"_agent_\"** gebruikt. Dit verwijst algemeen naar het systeem dat **iteratief observeert, acties neemt en resultaten van acties integreert**. De agent kan daarbij rekenen op de voorspellingen van **één of meerdere ML modellen**.\n",
     ":::\n",
     "\n",
     "_Agents_ die via RL getraind worden, hebben de volgende algemene eigenschappen:\n",
@@ -136,7 +136,6 @@
     "(target-rl-model-free)=\n",
     "Bij _model-free_ RL leert de agent rechtstreeks uit ervaring **zonder een expliciet model van de omgevingsdynamieken te leren**. De agent leert welke acties goed zijn door ze uit te proberen en de _rewards_ te observeren. Dit kan op twee manieren:\n",
     "\n",
-    "(target-rl-policy-based)=\n",
     "(target-rl-value-based)=\n",
     "1. **_Policy-based_**: Er wordt een ML model getraind met _states_ als input en acties als output. Daaruit krijgt de _agent_ bij _inference_ dus rechtstreeks informatie over de optimale actie.\n",
     "2. **_Value based_**: Een ML model leert de _return_ te voorspellen, voor verschillende _states_ of _state_-actieparen. Daarna kan de _agent_, gegeven een bepaalde _state_, bijvoorbeeld de actie kiezen met de grootste verwachte _return_ (dit is een zogenaamde _greedy policy_).  \n",
