--- a/book/math_foundations/prob/probability.ipynb
+++ b/book/math_foundations/prob/probability.ipynb
@@ -964,7 +964,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "9eff0bd3",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
