mising pca target

--- a/book/math_foundations/struct/pca.ipynb
+++ b/book/math_foundations/struct/pca.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# PCA\n",
-    "\n",
+    "(target-pca)=\n",
     "**PCA** staat voor **_Principal Components Analysis_**. PCA is net als lineaire regressie een primaire techniek voor patroonherkenning in de wereld van ML, maar in tegenstelling tot lineaire regressie, is de techniek **_niet_ gebaseerd op een model** van de werkelijkheid (of de oorsprong van de data). \n",
     "\n",
     "Het is een techniek die vaak gebruikt wordt om hoog-dimensionele feature vectoren samen te drukken in een kleinere vectorruimte met behoud van de belangrijkste proportie van de variantie in de originele ruimte. De essentie is echter dat deze techniek **feature matrices, die potentieel gecorreleerd zijn, projecteert op** een nieuwe set van ongecorreleerde variabelen, de **principale componenten**.\n",
