--- a/book/math_foundations/labs/probability-likelihood.ipynb
+++ b/book/math_foundations/labs/probability-likelihood.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "source": [
     "# Likelihood\n",
-    "\n",
     "In dit labo leer je hoe je maximum likelihood schatting toepast, onzekerheid kwantificeert via betrouwbaarheidsintervallen en predictie-intervallen, en modellen vergelijkt met de likelihood ratio test."
    ]
   },
@@ -44,11 +43,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "581ee3d5",
+   "execution_count": 2,
+   "id": "3b15fc47",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum Likelihood Estimates:\n",
+      "  b0: 52.303\n",
+      "  b1:     2.076\n",
+      "  noise:  3.955\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Data\n",
+    "area = np.array([50, 60, 70, 80, 90, 100, 110, 120, 130, 140])\n",
+    "price = np.array([150, 180, 195, 220, 245, 260, 285, 300, 320, 340])\n",
+    "\n",
+    "# Design matrix X (add column of ones for intercept)\n",
+    "X = np.column_stack([np.ones(len(area)), area])\n",
+    "y = price\n",
+    "\n",
+    "# OLS solution: b_hat = (X^T X)^{-1} X^T y\n",
+    "XtX_inv = np.linalg.inv(X.T @ X)\n",
+    "b_hat = XtX_inv @ X.T @ y\n",
+    "\n",
+    "# Calculate residuals\n",
+    "residuals = y - X @ b_hat\n",
+    "\n",
+    "# ML estimate for sigma (unbiased version)\n",
+    "N = len(y)\n",
+    "M = 2  # number of parameters (intercept + slope)\n",
+    "sigma_hat = np.sqrt(np.sum(residuals**2) / (N - M))\n",
+    "\n",
+    "print(\"Maximum Likelihood Estimates:\")\n",
+    "print(f\"  b0: {b_hat[0]:.3f}\")\n",
+    "print(f\"  b1:     {b_hat[1]:.3f}\")\n",
+    "print(f\"  noise:  {sigma_hat:.3f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,11 +97,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "27855411",
+   "execution_count": 3,
+   "id": "d684a6f9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "95% Confidence Intervals:\n",
+      "  b0: [42.337, 62.269]\n",
+      "  b1: [1.975, 2.176]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate standard errors\n",
+    "# SE(b_j) = σ * sqrt([(X^T X)^{-1}]_{jj})\n",
+    "se_b = sigma_hat * np.sqrt(np.diag(XtX_inv))\n",
+    "\n",
+    "# 95% confidence intervals using t-distribution\n",
+    "alpha = 0.05\n",
+    "t_critical = stats.t.ppf(1 - alpha / 2, df=N - M)\n",
+    "\n",
+    "ci_lower = b_hat - t_critical * se_b\n",
+    "ci_upper = b_hat + t_critical * se_b\n",
+    "\n",
+    "print(f\"\\n95% Confidence Intervals:\")\n",
+    "print(f\"  b0: [{ci_lower[0]:.3f}, {ci_upper[0]:.3f}]\")\n",
+    "print(f\"  b1: [{ci_lower[1]:.3f}, {ci_upper[1]:.3f}]\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,11 +142,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "56ee96db",
+   "execution_count": 4,
+   "id": "39f6be66",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction for a house of 95 square meters:\n",
+      "  Point prediction: 249.50\n",
+      "\n",
+      "95% Prediction Interval (individual house):\n",
+      "  [239.93, 259.07]\n",
+      "\n",
+      "95% Confidence Interval (mean of all 95 square meters houses):\n",
+      "  [246.62, 252.38]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict for a house of 95 m²\n",
+    "area_new = 95\n",
+    "x_new = np.array([1, area_new])\n",
+    "\n",
+    "# Point prediction\n",
+    "y_pred = x_new @ b_hat\n",
+    "\n",
+    "# Calculate leverage (hat value)\n",
+    "# h_new = x_new^T (X^T X)^{-1} x_new\n",
+    "h_new = x_new @ XtX_inv @ x_new\n",
+    "\n",
+    "# Standard error for prediction (includes inherent noise)\n",
+    "# SE_pred = σ * sqrt(1 + h_new)\n",
+    "se_pred = sigma_hat * np.sqrt(1 + h_new)\n",
+    "\n",
+    "# Standard error for mean response (excludes inherent noise)\n",
+    "# SE_mean = σ * sqrt(h_new)\n",
+    "se_mean = sigma_hat * np.sqrt(h_new)\n",
+    "\n",
+    "# 95% prediction interval\n",
+    "pred_lower = y_pred - t_critical * se_pred\n",
+    "pred_upper = y_pred + t_critical * se_pred\n",
+    "\n",
+    "# 95% confidence interval for mean\n",
+    "mean_lower = y_pred - t_critical * se_mean\n",
+    "mean_upper = y_pred + t_critical * se_mean\n",
+    "\n",
+    "print(f\"Prediction for a house of {area_new} square meters:\")\n",
+    "print(f\"  Point prediction: {y_pred:.2f}\")\n",
+    "print(\"\\n95% Prediction Interval (individual house):\")\n",
+    "print(f\"  [{pred_lower:.2f}, {pred_upper:.2f}]\")\n",
+    "print(f\"\\n95% Confidence Interval (mean of all {area_new} square meters houses):\")\n",
+    "print(f\"  [{mean_lower:.2f}, {mean_upper:.2f}]\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,11 +217,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1f335555",
+   "execution_count": 5,
+   "id": "35d3deea",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Likelihood Ratio Test:\n",
+      "Test statistic Λ: 56.348\n",
+      "  Degrees of freedom: 1\n",
+      "  Critical value (χ² at α=0.05): 3.841\n",
+      "  P-value: 0.000000\n",
+      "\n",
+      "Conclusion:\n",
+      "  The full model explains the data much better.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model 1: Full model (already fitted)\n",
+    "# Calculate log-likelihood for full model\n",
+    "log_likelihood_full = -N / 2 * np.log(2 * np.pi * sigma_hat**2) - np.sum(residuals**2) / (\n",
+    "    2 * sigma_hat**2\n",
+    ")\n",
+    "\n",
+    "# Model 0: Reduced model (intercept only - just the mean)\n",
+    "b0_reduced = np.mean(y)\n",
+    "residuals_reduced = y - b0_reduced\n",
+    "sigma_reduced = np.sqrt(np.sum(residuals_reduced**2) / (N - 1))\n",
+    "\n",
+    "# Calculate log-likelihood for reduced model\n",
+    "log_likelihood_reduced = -N / 2 * np.log(2 * np.pi * sigma_reduced**2) - np.sum(\n",
+    "    residuals_reduced**2\n",
+    ") / (2 * sigma_reduced**2)\n",
+    "\n",
+    "# Likelihood ratio test statistic\n",
+    "Lambda = -2 * (log_likelihood_reduced - log_likelihood_full)\n",
+    "\n",
+    "# Degrees of freedom: difference in number of parameters\n",
+    "df_test = 1  # M_1 - M_0 = 2 - 1\n",
+    "\n",
+    "# Critical value from chi-squared distribution\n",
+    "alpha_test = 0.05\n",
+    "chi2_critical = stats.chi2.ppf(1 - alpha_test, df_test)\n",
+    "\n",
+    "# P-value\n",
+    "p_value_lrt = 1 - stats.chi2.cdf(Lambda, df_test)\n",
+    "\n",
+    "print(\"Likelihood Ratio Test:\")\n",
+    "print(f\"Test statistic Λ: {Lambda:.3f}\")\n",
+    "print(f\"  Degrees of freedom: {df_test}\")\n",
+    "print(f\"  Critical value (χ² at α={alpha_test}): {chi2_critical:.3f}\")\n",
+    "print(f\"  P-value: {p_value_lrt:.6f}\")\n",
+    "\n",
+    "print(\"\\nConclusion:\")\n",
+    "if Lambda > chi2_critical:\n",
+    "    print(\"  The full model explains the data much better.\")\n",
+    "else:\n",
+    "    print(\"  The area parameter does not significantly improve the model.\")"
+   ]
   }
  ],
  "metadata": {
