--- a/book/math_foundations/labs/probability-testing.ipynb
+++ b/book/math_foundations/labs/probability-testing.ipynb
@@ -32,11 +32,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "59464f3d",
+   "execution_count": 2,
+   "id": "cb9869ee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x =  15: P(X≤x) = 0.3107\n",
+      "x = 120: P(X≥x) = 0.2111\n",
+      "x =  63: P(X≥x) = 0.4607\n",
+      "x = 888: P(X≥x) = 0.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "mu = 55\n",
+    "sigma = 81\n",
+    "\n",
+    "for x in [15, 120, 63, 888]:\n",
+    "    p_right = 1 - stats.norm.cdf(x, mu, sigma)\n",
+    "    p_left = stats.norm.cdf(x, mu, sigma)\n",
+    "\n",
+    "    if x < mu:\n",
+    "        print(f\"x = {x:3d}: P(X≤x) = {p_left:.4f}\")\n",
+    "    else:\n",
+    "        print(f\"x = {x:3d}: P(X≥x) = {p_right:.4f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,11 +77,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28f9fe69",
+   "execution_count": 3,
+   "id": "1d803ece",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manual\n",
+      "t-statistic: 2.1904\n",
+      "p-value (two-tailed): 0.0412\n",
+      "\n",
+      "USING stats.ttest_1samp():\n",
+      "t-statistic: 2.1904\n",
+      "p-value (two-tailed): 0.0412\n",
+      "\n",
+      "Test result:\n",
+      "The mean commute time significantly differs from 30 minutes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sample data\n",
+    "commute_times = np.array(\n",
+    "    [28, 35, 32, 29, 31, 33, 27, 36, 30, 34, 31, 29, 32, 28, 35, 31, 33, 30, 32, 29]\n",
+    ")\n",
+    "mu_0 = 30  # Hypothesized mean\n",
+    "\n",
+    "# Manual calculation\n",
+    "# Calculate sample statistics\n",
+    "sample_mean = commute_times.mean()\n",
+    "sample_std = commute_times.std(ddof=1)  # N-1 for sample standard deviation\n",
+    "n = len(commute_times)\n",
+    "se = sample_std / np.sqrt(n)  # Standard error\n",
+    "\n",
+    "# Calculate t-statistic manually\n",
+    "t_statistic_manual = (sample_mean - mu_0) / se\n",
+    "\n",
+    "# Degrees of freedom\n",
+    "df = n - 1\n",
+    "\n",
+    "# Calculate p-value (two-tailed test)\n",
+    "p_value_manual = 2 * (1 - stats.t.cdf(abs(t_statistic_manual), df))\n",
+    "\n",
+    "print(\"Manual\")\n",
+    "print(f\"t-statistic: {t_statistic_manual:.4f}\")\n",
+    "print(f\"p-value (two-tailed): {p_value_manual:.4f}\")\n",
+    "\n",
+    "# Using scipy.stats.ttest_1samp\n",
+    "t_statistic_scipy, p_value_scipy = stats.ttest_1samp(commute_times, mu_0)\n",
+    "\n",
+    "\n",
+    "print(\"\\nUSING stats.ttest_1samp():\")\n",
+    "print(f\"t-statistic: {t_statistic_scipy:.4f}\")\n",
+    "print(f\"p-value (two-tailed): {p_value_scipy:.4f}\")\n",
+    "\n",
+    "# Hypothesis test conclusion\n",
+    "print(\"\\nTest result:\")\n",
+    "if p_value_scipy < 0.05:\n",
+    "    print(\"The mean commute time significantly differs from 30 minutes.\")\n",
+    "else:\n",
+    "    print(\"No significant evidence that mean commute time differs from 30 minutes.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,11 +157,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b35d7ae7",
+   "execution_count": 5,
+   "id": "ec85cf58",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manual\n",
+      "t-statistic: 8.8369\n",
+      "p-value: 0.0000\n",
+      "\n",
+      "Using scipy.stats.ttest_ind():\n",
+      "t-statistic: 8.8369\n",
+      "p-value: 0.0000\n",
+      "The medicine significantly lowers blood pressure.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Blood pressure data\n",
+    "control = np.array([120, 118, 122, 125, 119, 121, 123, 120, 124, 122, 121, 119, 123, 120, 122])\n",
+    "treatment = np.array([115, 112, 118, 114, 116, 113, 115, 117, 114, 116, 115, 113, 112, 118, 116])\n",
+    "\n",
+    "# Manual calculation\n",
+    "n1 = len(control)\n",
+    "n2 = len(treatment)\n",
+    "mean1 = control.mean()\n",
+    "mean2 = treatment.mean()\n",
+    "std1 = control.std(ddof=1)\n",
+    "std2 = treatment.std(ddof=1)\n",
+    "\n",
+    "# Pooled standard deviation (assuming equal variances)\n",
+    "pooled_std = np.sqrt(((n1 - 1) * std1**2 + (n2 - 1) * std2**2) / (n1 + n2 - 2))\n",
+    "\n",
+    "# Standard error of difference\n",
+    "se_diff = pooled_std * np.sqrt(1 / n1 + 1 / n2)\n",
+    "\n",
+    "# t-statistic\n",
+    "t_stat_manual = (mean1 - mean2) / se_diff\n",
+    "\n",
+    "# Degrees of freedom\n",
+    "df_manual = n1 + n2 - 2\n",
+    "\n",
+    "# p-value for one-sided test (control > treatment)\n",
+    "p_value_manual = 1 - stats.t.cdf(t_stat_manual, df_manual)\n",
+    "\n",
+    "print(\"Manual\")\n",
+    "print(f\"t-statistic: {t_stat_manual:.4f}\")\n",
+    "print(f\"p-value: {p_value_manual:.4f}\")\n",
+    "\n",
+    "# Using scipy.stats.ttest_ind\n",
+    "t_stat_scipy, p_value_scipy = stats.ttest_ind(control, treatment, alternative=\"greater\")\n",
+    "\n",
+    "print(\"\\nUsing scipy.stats.ttest_ind():\")\n",
+    "print(f\"t-statistic: {t_stat_scipy:.4f}\")\n",
+    "print(f\"p-value: {p_value_scipy:.4f}\")\n",
+    "\n",
+    "# Hypothesis test conclusion\n",
+    "if p_value_scipy < 0.05:\n",
+    "    print(\"The medicine significantly lowers blood pressure.\")\n",
+    "else:\n",
+    "    print(\"No significant evidence that the medicine lowers blood pressure.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,11 +236,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1b932955",
+   "execution_count": 7,
+   "id": "38376e1c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample proportion: 72.00%\n",
+      "p-value (one-sided): 0.0342\n",
+      "Satisfaction is significantly lower than 80%.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Binomial test parameters\n",
+    "n_trials = 100  # Total number of customers\n",
+    "n_successes = 72  # Number of satisfied customers\n",
+    "p_claimed = 0.80  # Claimed satisfaction rate\n",
+    "\n",
+    "result = stats.binomtest(n_successes, n_trials, p_claimed, alternative=\"less\")\n",
+    "\n",
+    "# Calculate sample proportion\n",
+    "p_observed = n_successes / n_trials\n",
+    "\n",
+    "print(f\"Sample proportion: {p_observed:.2%}\")\n",
+    "print(f\"p-value (one-sided): {result.pvalue:.4f}\")\n",
+    "if result.pvalue < 0.05:\n",
+    "    print(\"Satisfaction is significantly lower than 80%.\")\n",
+    "else:\n",
+    "    print(\"No significant evidence that satisfaction is lower than 80%.\")"
+   ]
   }
  ],
  "metadata": {
